[package]
edition = "2021"
name = "libopusenc-static-sys"
version = "1.0.1"
links = "libopusenc"
authors = ["Will Hedgecock <will.hedgecock@hedgetech.net>"]
license = "MIT"
description = "Rust bindings to the reference Opus Encoder library (libopusenc)"
documentation = "https://docs.rs/libopusenc-static-sys/latest/"
readme = "README.md"
homepage = "https://github.com/hedgetechllc/libopusenc-static-sys"
repository = "https://github.com/hedgetechllc/libopusenc-static-sys"
keywords = ["libopusenc", "opus", "libopus", "bindings", "ffi"]
categories = ["encoding", "external-ffi-bindings", "multimedia::audio", "multimedia::encoding", "no-std"]
publish = true

[lib]
crate-type = ["rlib"]

[features]
default = []

[dependencies]
opus-static-sys = { version = "1.0" }

[build-dependencies]
bindgen = { version = "0.71" }
cc = { version = "1.2" }
yap = { version = "0.12" }

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
panic = "abort"
rpath = false
strip = "symbols"
